--- a/scripts/bagpype_template.yaml
+++ b/scripts/bagpype_template.yaml
@@ -1,23 +1,23 @@
 #<><><><><> BagPype Parameters Template <><><><><>#
 # path to BagPype pipeline (no quotes)
-pype_path: /Users/Jacob/Desktop
+pype_path: /Users/Jacob/Desktop/Github
 # path to data (no quotes)
-data_path: /Users/Jacob/Documents/Test_Res/Adult
+data_path: /Users/Jacob/Desktop/GitHub/NVLD/Created_Data
 # Batch: name of data minus the .csv (keep in quotes) 
 # To run multiple datsets include dataset names in brackets and seperated by a comma(s)
 # example > batch: ['comb_parent_uk_nov_res', 'comb_parent_uk_nov_res'] 
-batch: ['adult_t1_res']
+batch: ['nvld_cluster_data_2']
 # louvain_metric: distance metric -> options: spearman, euclid
 louvain_metric: 'spearman'
 # silo_metric = sklearn.metrics.silhouette_score
 silo_metric: 'correlation'
 # ID: Subject ID
-ID: 'prolific_academic_id'
+ID: 'URSI'
 # Boot: 
 # - 'Yes' > Runs bootstrapping version of louvain only
 # - 'No' > No bootstrapping and runs only once on full dataset
 # - 'Both' > Runs both bootstrapping and non-bootstrapping
-Boot: 'Yes'
+Boot: 'Both'
 # n_straps = number of bootstrapped samples (n_straps need to be 50 or higher)
 n_straps: 50
 # parellel processing cors (use 1 for no parallel processing)
