--- a/scripts/bagpype_template.yaml
+++ b/scripts/bagpype_template.yaml
@@ -4,7 +4,7 @@
 
 #----------------------------------------------------------------------------------------------------------#
 # path to BagPype pipeline (no quotes)
-pype_path: /path_to_bagpype_folder/scripts
+pype_path: /path_to_bagpype_folder
 #----------------------------------------------------------------------------------------------------------#
 # path to data (no quotes)
 data_path: /path_to_data
